Corrected the Configuration settings, updated the HTML and Js files

--- a/aboutHadzz.html
+++ b/aboutHadzz.html
@@ -21,7 +21,7 @@
             <li class="hover:cursor-pointer border-b-2 text-pink-600"><a href="./aboutHadzz.html">About
                     Me</a></li>
             <li class="hover:cursor-pointer hover:text-pink-600"><a href="./projects.html">Projects</a></li>
-            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./skills.html">Skills</a></li>
+            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./skillss.html">Skills</a></li>
             <li class="hover:cursor-pointer hover:text-pink-600"><a href="./contact.html">Contact</a></li>
         </section>
 
@@ -113,7 +113,7 @@
 
 <script src="index.html"></script>
 <script src="projects.html"></script>
-<script src="skills.html"></script>
+<script src="skillss.html"></script>
 <script src="contact.html"></script>
 
 <script src="https://kit.fontawesome.com/334ac14b63.js" crossorigin="anonymous"></script>
