--- a/projects.html
+++ b/projects.html
@@ -12,12 +12,37 @@
 
 <body class="bg-amber-800">
 
+    <!-- navbar/menu -->
+    <section id="menu"
+        class="list-none fixed inline w-[9rem] z-10 space-y-1 text-gray-900 top-[29rem] text-center right-[1rem] sm:right-12 leading-8 font-medium text-md">
+        <!-- menu -->
+        <section id="menuList" class="bg-[#BFB1C1] hidden rounded-t-full px-5 pb-2 pt-1 font-bold">
+            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./index.html">Home</a></li>
+            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./aboutHadzz.html">About
+                    Me</a></li>
+            <li class="hover:cursor-pointer border-b-2 text-pink-600"><a href="./projects.html">Projects</a></li>
+            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./skillss.html">Skills</a></li>
+            <li class="hover:cursor-pointer hover:text-pink-600"><a href="./contact.html">Contact</a></li>
+        </section>
+
+        <!-- menu icon -->
+        <section id="menuTag"
+            class="font-bold text-2xl sm:text-[1rem] bg-pink-400 p-4 sm:p-1 fixed right-6 sm:right-12 bottom-9 hover:bg-pink-500 hover:h-9 w-fit sm:w-[9.5rem] hover:margin-t-1 rounded-full text-center">
+            <section class="hover:text-pink-200 justify-around items-center cursor-pointer flex">
+                <span class="hidden sm:inline">Menu</span>
+                <i class="fa-solid fa-bars size-5 mt-0 sm:mt-1"></i>
+            </section>
+        </section>
+
+    </section>
+
 </body>
 <script src="projects.js"></script>
+<script src="menu.js"></script>
 
 <script src="index.html"></script>
 <script src="aboutHadzz.html"></script>
-<script src="skills.html"></script>
+<script src="skillss.html"></script>
 <script src="contact.html"></script>
 
 <script src="https://kit.fontawesome.com/334ac14b63.js" crossorigin="anonymous"></script>
